Fixed dark mode app footer styles

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -286,14 +286,6 @@ $submenu-width: 245px;
   padding: 3px 130px;
 }
 
-.app_footer {
-  background: #F9F9F9;
-}
-
-.dark.app_footer {
-  background: var(--nypl-colors-dark-ui-bg-default) !important;
-}
-
 .participating_schools_list {
   padding: 15px 0px !important;
 }
